@@ -32,7 +32,6 @@ import (
 	"github.com/elastic/beats/libbeat/metric/system/host"
 	"github.com/elastic/beats/libbeat/processors"
 	"github.com/elastic/go-sysinfo"
-	"github.com/elastic/go-sysinfo/types"
 )
 
 func init() {
@@ -40,7 +39,6 @@ func init() {
 }
 
 type addHostMetadata struct {
-	info       types.HostInfo
 	lastUpdate struct {
 		time.Time
 		sync.Mutex
@@ -50,8 +48,7 @@ type addHostMetadata struct {
 }
 
 const (
-	processorName   = "add_host_metadata"
-	cacheExpiration = time.Minute * 5
+	processorName = "add_host_metadata"
 )
 
 func newHostMetadataProcessor(cfg *common.Config) (processors.Processor, error) {
@@ -60,12 +57,7 @@ func newHostMetadataProcessor(cfg *common.Config) (processors.Processor, error) 
 		return nil, errors.Wrapf(err, "fail to unpack the %v configuration", processorName)
 	}
 
-	h, err := sysinfo.Host()
-	if err != nil {
-		return nil, err
-	}
 	p := &addHostMetadata{
-		info:   h.Info(),
 		config: config,
 		data:   common.NewMapStrPointer(nil),
 	}
@@ -75,28 +67,41 @@ func newHostMetadataProcessor(cfg *common.Config) (processors.Processor, error) 
 
 // Run enriches the given event with the host meta data
 func (p *addHostMetadata) Run(event *beat.Event) (*beat.Event, error) {
-	p.loadData()
+	err := p.loadData()
+	if err != nil {
+		return nil, err
+	}
+
 	event.Fields.DeepUpdate(p.data.Get().Clone())
 	return event, nil
 }
 
 func (p *addHostMetadata) expired() bool {
+	if p.config.CacheTTL <= 0 {
+		return true
+	}
+
 	p.lastUpdate.Lock()
 	defer p.lastUpdate.Unlock()
 
-	if p.lastUpdate.Add(cacheExpiration).After(time.Now()) {
+	if p.lastUpdate.Add(p.config.CacheTTL).After(time.Now()) {
 		return false
 	}
 	p.lastUpdate.Time = time.Now()
 	return true
 }
 
-func (p *addHostMetadata) loadData() {
+func (p *addHostMetadata) loadData() error {
 	if !p.expired() {
-		return
+		return nil
 	}
 
-	data := host.MapHostInfo(p.info)
+	h, err := sysinfo.Host()
+	if err != nil {
+		return err
+	}
+
+	data := host.MapHostInfo(h.Info())
 	if p.config.NetInfoEnabled {
 		// IP-address and MAC-address
 		var ipList, hwList, err = p.getNetInfo()
@@ -113,6 +118,7 @@ func (p *addHostMetadata) loadData() {
 	}
 
 	p.data.Set(data)
+	return nil
 }
 
 func (p *addHostMetadata) getNetInfo() ([]string, []string, error) {
@@ -161,6 +167,6 @@ func (p *addHostMetadata) getNetInfo() ([]string, []string, error) {
 }
 
 func (p *addHostMetadata) String() string {
-	return fmt.Sprintf("%v=[netinfo.enabled=[%v]]",
-		processorName, p.config.NetInfoEnabled)
+	return fmt.Sprintf("%v=[netinfo.enabled=[%v], cache.ttl=[%v]]",
+		processorName, p.config.NetInfoEnabled, p.config.CacheTTL)
 }
